Add margin to About Me section image for improved layout

--- a/body/sections/about-me.html
+++ b/body/sections/about-me.html
@@ -6,7 +6,7 @@
         </div>
         <div class="row text-center">
             <div class="col-md-2">
-                <span class="fa-stack fa-4x">
+                <span class="fa-stack fa-4x" style="margin-bottom: 20px;">
                     <img class="rounded-circle img-fluid" src="assets/img/about/me.png" alt="" />
                 </span>
             </div>
