Update subheading in Publications section for improved clarity

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="text-center">
                 <h2 class="section-heading text-uppercase">Publications</h2>
-                <!-- <h3 class="section-subheading text-muted">Um pouco dos meus estudos.</h3> -->
+                <h3 class="section-subheading text-muted">A list of my publications grouped by year</h3>
             </div>
             <script src="https://bibbase.org/service/mendeley/143c02f2-51f4-3ef0-a59f-4e4c6ce692c6?jsonp=1&folding=1&showSearch=1"></script>
         </div>
