Update project captions to enhance clarity on software engineering expertise

--- a/body/sections/projects.html
+++ b/body/sections/projects.html
@@ -170,7 +170,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Ginga NCL</div>
-                        <div class="portfolio-caption-subheading text-muted"><b>Embedded Systems, Multimedia</b></div>
+                        <div class="portfolio-caption-subheading text-muted"><b>Software Engineering, Embedded Systems, Multimedia</b></div>
                         <div class="portfolio-caption-subheading text-muted">c, c++, gstreamer, lua, ncl, gdb</div>
                     </div>
                 </div>
@@ -189,7 +189,7 @@
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Cacuriá</div>
-                        <div class="portfolio-caption-subheading text-muted"><b>Multimedia</b></div>
+                        <div class="portfolio-caption-subheading text-muted"><b>Software Engineering, Multimedia</b></div>
                         <div class="portfolio-caption-subheading text-muted">c++, qt, javascript, ncl, lua</div>
                     </div>
                 </div>
