Add promotional video and refine project description in Cacuria section for enhanced clarity

--- a/projects/cacuria.html
+++ b/projects/cacuria.html
@@ -98,7 +98,7 @@
                     <p class="text-muted-centered">
                         <img class="img-fluid d-block mx-auto" src="../assets/img/projects/cacuria/interface.png" alt="" />
                         <b>Figure 1:</b> Screenshot of the Cacuria interface, showcasing its intuitive layout.
-                    </p>
+                    </p>                    
                     <p class="text-muted-justified">
                         One of Cacuriá's most exciting features is its integration with the iVoD service from
                         <a class="link" target="_blank" href="https://www.rnp.br/">RNP</a>, the National Research
@@ -108,7 +108,7 @@
                         to have been a part of its development.
                     </p>
                     <p class="text-muted-justified">
-                        This project had a profound impact on my career as a researcher. Almost completing my
+                        This project had a deep impact on my career as a researcher. Almost completing my
                         M.Sc. degree, I co-founded Mediabox Technologies with a friend in 2014. Our company's primary
                         focus is to promote Cacuriá in Brazil and provide ongoing maintenance for the tool to
                         support RNP. Additionally, we developed Mestrar, an online platform designed to provide
@@ -120,6 +120,10 @@
                     <p class="text-muted-centered">
                         <img class="img-fluid d-block mx-auto" src="../assets/img/projects/cacuria/architecture.jpg" alt="" />
                         <b>Figure 2:</b> System architecture of Cacuriá and Mestrar: illustrating the integration between the content creation tool (Cacuriá) and the content storage and delivery platform (Mestrar), developed to support educational initiatives and RNP's requirements.
+                    </p>
+                    <p class="text-muted-centered">
+                        <iframe class="d-block mx-auto" width="560" height="315" src="https://www.youtube.com/embed/9NnBJ9qlHi4?si=A9bUbJxakTANJnOa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <b>Video:</b> A promotional video presenting what Cacuriá is and its key features.
                     </p>
                     <ul class="list-inline">
                         <li>More information:
