Add project overview and detailed description of EDUVIS tool, enhancing clarity on research objectives and outcomes

--- a/projects/eduvis.html
+++ b/projects/eduvis.html
@@ -29,8 +29,30 @@
                 <h3 class="section-subheading text-muted">An online tool to assemble dashboards based on
                     instructors’ preferences</h3>
             </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Overview</h4>
+            </div>
             <div class="row justify-content-center">
-                <div class="col-md-12">
+                <div class="col-md-11">
+                    <p class="text-muted-justified">
+                        <b>(S)ituation:</b> While pursuing my Ph.D. between 2016 and 2020, I investigated how to better support instructors in analyzing student behavior and performance using data from Virtual Learning Environments (VLEs).
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(T)ask:</b> The objective was to develop a framework and tool that would enable instructors to gain actionable insights from student interaction logs, enhancing teaching strategies and student support.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(A)ction:</b> We began by interviewing Brazilian instructors and conducting a systematic literature review to identify meaningful indicators of student performance and behavior, as well as current gaps in educational data analysis. We then analyzed logs from real online courses using statistical and machine learning techniques, and explored visualization preferences among instructors—an area underrepresented in prior research. Based on these findings, we designed a conceptual model that combined learning analytics and visual analytics principles, and developed an open-source tool, EDUVIS, using Python, JavaScript, and Plotly to provide 141 interactive visualizations tailored to instructors’ needs.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(R)esult:</b> The resulting framework and tool were well-received by instructors, who confirmed the utility of the visualizations and provided valuable feedback for further refinement. This work not only enhanced the analysis capabilities of VLEs but also established a foundation for future dashboard development and research in educational data mining and learning analytics.
+                    </p>
+                </div>
+            </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Full Report</h4>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-11">
                     <p class="text-muted-justified">
                         This project is my Ph.D. research performed between 2016 and 2020, which we 
                         shed light on how to support instructors in analyzing student logs from Virtual
