Add project overview and detailed methodology for Rural Property Valuation, enhancing clarity on project objectives and outcomes

--- a/projects/rural-property-valuation.html
+++ b/projects/rural-property-valuation.html
@@ -28,8 +28,30 @@
                 <h2 class="section-heading text-uppercase">Rural Property Valuation</h2>
                 <h3 class="section-subheading text-muted">Artificial Intelligence to Support Rural Property Valuation</h3>
             </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Overview</h4>
+            </div>
             <div class="row justify-content-center">
-                <div class="col-md-12">
+                <div class="col-md-11">
+                    <p class="text-muted-justified">
+                        <b>(S)ituation:</b> In 2022 at Gaivota and 2023 at Seedz, I led a project to develop a machine learning solution for rural property valuation—an essential process for enabling credit, insurance, estate planning, and land transactions in Brazil.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(T)ask:</b> Our mission was to create a reliable and scalable model to estimate rural land value across Brazil, despite the major challenge of limited and fragmented data availability.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(A)ction:</b> We began with a literature review to understand domain-specific methodologies, followed by a deep exploration of public datasets. Due to the absence of a centralized property price database, we developed a web crawler to extract real estate listings and geocoded them to enrich the dataset with geographic features like terrain and altitude. We carried out robust data cleaning, outlier removal, and feature selection to ensure data quality. We also tested correlations between land prices and commodity prices, identifying that their negative correlation limited their predictive value. Multiple machine learning models were experimented with, and a RESTful API was deployed to integrate the solution into internal applications.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(R)esult:</b> We achieved promising model performance despite limited data, and learned that nationwide data expansion and quality improvements are crucial to further enhance accuracy. The solution laid a foundation for scalable rural valuation and demonstrated the power of combining research-driven methodologies with applied data science.
+                    </p>
+                </div>
+            </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Full Report</h4>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-11">
                     <p class="text-muted-justified">
                         As Data Science Manager at <a class="link" target="_blank" href='https://gaivota.ai/'>Gaivota</a> in 2022
                         and <a class="link" target="_blank" href='https://www.seedz.ag/'>Seedz</a> in 2023,
@@ -54,7 +76,7 @@
                         such as terrain and altitude. During the data distribution analysis, we identified a significant 
                         data concentration in the Southeast region of Brazil. We implemented a rigorous feature selection 
                         process, enabling us to retain only the most pertinent data while eliminating noise. Additionally, 
-                        we conducted meticulous data cleaning and outlier removal to ensure the quality of our dataset.
+                        we conducted data cleaning and outlier removal to ensure the quality of our dataset.
                     </p>
                     <p class="text-muted-justified">
                         One key aspect of our analysis involved examining the correlation between the value of bare land 
