Add project summary figure to Rural Property Valuation page for enhanced clarity on methodology

--- a/projects/rural-property-valuation.html
+++ b/projects/rural-property-valuation.html
@@ -90,7 +90,11 @@
                         of experiments employing diverse machine learning methodologies. As a result, we attained outcomes 
                         that can be characterized as reasonably promising. Nevertheless, an important lesson that emerged 
                         from our endeavors was the necessity to enhance data quality and broaden data coverage nationwide. 
-                        These enhancements are essential to elevate the precision of our predictive model.
+                        These enhancements are essential to elevate the precision of our predictive model.                        
+                    </p>
+                    <p class="text-muted-centered">
+                        <img class="img-fluid d-block mx-auto" src="../assets/img/projects/rural-property-valuation/rural_property_valuation.png" alt="" />
+                        <b>Figure 1:</b> This figure summarizes the key steps of the project, from developing a web crawler to extract real estate listings to implementing a machine learning model for property valuation.
                     </p>
                     <p class="text-muted-justified">
                         Furthermore, we deployed a Restful API to provide an interface for internal applications to access 
