Enhance project description for Rural Property Valuation, detailing the situation, task, action, and results to improve clarity on the project's impact and methodology.

--- a/projects/rural-property-valuation.html
+++ b/projects/rural-property-valuation.html
@@ -34,16 +34,16 @@
             <div class="row justify-content-center">
                 <div class="col-md-11">
                     <p class="text-muted-justified">
-                        <b>(S)ituation:</b> In 2022 at Gaivota and 2023 at Seedz, I led a project to develop a machine learning solution for rural property valuation—an essential process for enabling credit, insurance, estate planning, and land transactions in Brazil.
+                        <b>(S)ituation:</b> In 2022 at Gaivota and 2023 at Seedz, I led a project to develop a machine learning solution for rural property valuation. This process was identified by the product team as critical for enabling credit, insurance, and land transactions in Brazil. At the time, the credit provision process for growers relied on banks manually valuing rural properties, which often took 8 to 10 days to complete.
                     </p>
                     <p class="text-muted-justified">
-                        <b>(T)ask:</b> Our mission was to create a reliable and scalable model to estimate rural land value across Brazil, despite the major challenge of limited and fragmented data availability.
+                        <b>(T)ask:</b> Our goal was to create a reliable and scalable model to estimate rural land value across Brazil, despite the major challenge of limited and fragmented data availability.
                     </p>
                     <p class="text-muted-justified">
-                        <b>(A)ction:</b> We began with a literature review to understand domain-specific methodologies, followed by a deep exploration of public datasets. Due to the absence of a centralized property price database, we developed a web crawler to extract real estate listings and geocoded them to enrich the dataset with geographic features like terrain and altitude. We carried out robust data cleaning, outlier removal, and feature selection to ensure data quality. We also tested correlations between land prices and commodity prices, identifying that their negative correlation limited their predictive value. Multiple machine learning models were experimented with, and a RESTful API was deployed to integrate the solution into internal applications.
+                        <b>(A)ction:</b> We began with a literature review to understand domain-specific methodologies, followed by a deep exploration of public datasets. Due to the absence of a centralized property price database, we developed a web crawler to systematically gather pricing and property features data. Following data collection, we conducted in-depth data analysis to identify correlations between geospatial data (e.g., landing cover,  terrain), location, soybean price, and other features. After feature selection was done, we developed a robust machine-learning model that produced highly accurate results. Then, we launched a Web service as an interface to deliver property valuations within minutes.
                     </p>
                     <p class="text-muted-justified">
-                        <b>(R)esult:</b> We achieved promising model performance despite limited data, and learned that nationwide data expansion and quality improvements are crucial to further enhance accuracy. The solution laid a foundation for scalable rural valuation and demonstrated the power of combining research-driven methodologies with applied data science.
+                        <b>(R)esult:</b> As a result, our solution drastically cut the property valuation time from 8-10 days to a few minutes, making it a benchmark in the industry and successfully integrated into a major Brazilian bank's credit provision pipeline for growers.
                     </p>
                 </div>
             </div>
