Add project overview and detailed methodology for Soybean Yield Forecast, enhancing clarity on the situation, task, action, and results achieved.

--- a/projects/soybean-yield-forecast.html
+++ b/projects/soybean-yield-forecast.html
@@ -28,8 +28,30 @@
                 <h2 class="section-heading text-uppercase">Soybean Yield Forecast</h2>
                 <h3 class="section-subheading text-muted">Artificial Intelligence to Support Agribusiness</h3>
             </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Overview</h4>
+            </div>
             <div class="row justify-content-center">
-                <div class="col-md-12">
+                <div class="col-md-11">
+                    <p class="text-muted-justified">
+                        <b>(S)ituation:</b> In 2021, as the new Data Science Manager at Gaivota, I led a project aimed at forecasting soybean yields in Mato Grosso—one of the most productive soybean regions globally. This project addressed a major agricultural challenge that affects farmers, industry stakeholders, and policymakers.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(T)ask:</b> Our goal was to build a predictive model that could estimate soybean yields (kg/hectare) for 89 municipalities in Mato Grosso, despite our team's lack of prior experience in agronomic modeling.
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(A)ction:</b> We started with a literature review of recent research (2016–2021) to identify best practices and relevant models, selecting two key papers with strong results and open-source implementations. We then built a dataset combining satellite imagery, weather data, soil properties, and official crop production statistics. Based on the literature, we implemented an ensemble model using Convolutional Neural Networks (CNNs) and Random Forests. We experimented with various data combinations and sliding window configurations, and validated our model with MAPE and RMSE. To operationalize the solution, we developed an AWS-based pipeline for data ingestion, cleansing, training, forecasting, and storage. Finally, we exposed the results via a RESTful API for internal applications..
+                    </p>
+                    <p class="text-muted-justified">
+                        <b>(R)esult:</b> The project achieved excellent predictive accuracy and contributed to Gaivota’s strategic expansion by enhancing product visibility and attracting new clients. It also demonstrated the team’s ability to tackle complex, interdisciplinary challenges in data science, setting a new standard for future projects.
+                    </p>
+                </div>
+            </div>
+            <div class="text-left">
+                <h4 class="section-heading text-capitalize">Full Report</h4>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-11">
                     <p class="text-muted-justified">
                         As Data Science Manager at <a class="link" target="_blank" href='https://gaivota.ai/'>Gaivota</a> in 2021, I led 
                         a important project early in my role. The project aimed to predict soybean yields for cities in Mato Grosso, 
