--- a/projects/user-interaction-analysis.html
+++ b/projects/user-interaction-analysis.html
@@ -54,7 +54,7 @@
                 <div class="col-md-11">
                     <p class="text-muted-justified">
                         As the Data Science Manager at <a class="link" target="_blank" href='https://gaivota.ai/'>Gaivota</a> (2022) and
-                        <a class="link" target="_blank" href='https://www.seedz.ag/'>Seedz</a> (2023), I led a high-impact project to analyze user 
+                        a Software Engineering Manager at <a class="link" target="_blank" href='https://www.seedz.ag/'>Seedz</a> (2023), I led a high-impact project to analyze user 
                         interactions within Seedz-Mercator, illustrated in Figure 1, which is a platform to manage agribusiness data such as compliance analysis, crop identification,
                         land cover, and property valuation. The company wanted to understand the user interactions on the platform to enhance the user experience,
                         and identify the most visited pages, components, user preferences and behaviors.                        
