Update project logos to PNG format for User Interaction Analysis, Rural Property Valuation, and Soybean Yield Forecast pages

--- a/projects/rural-property-valuation.html
+++ b/projects/rural-property-valuation.html
@@ -24,7 +24,7 @@
     <section class="page-section bg-white portfolio-section" id="projects">
         <div class="container" style="margin-top: 27px;">
             <div class="text-center">
-                <img class="img-fluid d-block mx-auto" src="../assets/img/projects/rural-property-valuation/logo.jpg" alt="" />
+                <img class="img-fluid d-block mx-auto" src="../assets/img/projects/rural-property-valuation/logo.png" alt="" />
                 <h2 class="section-heading text-uppercase">Rural Property Valuation</h2>
                 <h3 class="section-subheading text-muted">Artificial Intelligence to Support Rural Property Valuation</h3>
             </div>
