--- a/projects/user-interaction-analysis.html
+++ b/projects/user-interaction-analysis.html
@@ -24,7 +24,7 @@
     <section class="page-section bg-white portfolio-section" id="projects">
         <div class="container" style="margin-top: 27px;">
             <div class="text-center">
-                <img class="img-fluid d-block mx-auto" src="../assets/img/projects/user-interaction-analysis/logo.jpg" alt="" />
+                <img class="img-fluid d-block mx-auto" src="../assets/img/projects/user-interaction-analysis/logo.png" alt="" />
                 <h2 class="section-heading text-uppercase">User Interaction Analysis</h2>
                 <h3 class="section-subheading text-muted">Supporting Product Managers and Designers in their decision-making</h3>
             </div>
