--- a/body/sections/projects.html
+++ b/body/sections/projects.html
@@ -33,7 +33,7 @@
                                 <h3>Read More</h3>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/projects/user-interaction-analysis/logo.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/projects/user-interaction-analysis/logo.png" alt="" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">User Interaction Analysis</div>
@@ -52,7 +52,7 @@
                                 <h3>Read More</h3>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/projects/rural-property-valuation/logo.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/projects/rural-property-valuation/logo.png" alt="" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Rural Property Valuation</div>
@@ -71,7 +71,7 @@
                                 <h3>Read More</h3>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/projects/soybean-yield-forecast/logo.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/projects/soybean-yield-forecast/logo.png" alt="" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Soybean Yield Forecast</div>
