Replace JPG logo with PNG for Digital Inspector project to improve image quality

--- a/body/sections/projects.html
+++ b/body/sections/projects.html
@@ -90,7 +90,7 @@
                                 <h3>Read More</h3>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/projects/digital-inspector/logo.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/projects/digital-inspector/logo.png" alt="" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Digital Inspector</div>
