--- a/projects/digital-inspector.html
+++ b/projects/digital-inspector.html
@@ -24,7 +24,7 @@
     <section class="page-section bg-white portfolio-section" id="projects">
         <div class="container" style="margin-top: 27px;">
             <div class="text-center">
-                <img class="img-fluid d-block mx-auto" src="../assets/img/projects/digital-inspector/logo.jpg" alt="" />
+                <img class="img-fluid d-block mx-auto" src="../assets/img/projects/digital-inspector/logo.png" alt="" />
                 <h2 class="section-heading text-uppercase">Digital Inspector</h2>
                 <h3 class="section-subheading text-muted">Artificial Intelligence for Equipment Inspection</h3>
             </div>
