Add coding section with project showcases and update navigation links to enhance portfolio accessibility

--- a/body/navigation.html
+++ b/body/navigation.html
@@ -5,7 +5,7 @@
             <ul class="navbar-nav text-uppercase ml-auto">
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About me</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#analyses">Analyses</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#coding">Coding</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publications">Publications</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
