--- a/body/sections/coding.html
+++ b/body/sections/coding.html
@@ -1,7 +1,7 @@
-<section class="page-section bg-white portfolio-section" id="analyses">
+<section class="page-section bg-white portfolio-section" id="coding">
     <div class="container">
         <div class="text-center">
-            <h2 class="section-heading text-uppercase">Analyses</h2>
+            <h2 class="section-heading text-uppercase">Coding</h2>
             <h3 class="section-subheading text-muted">Explore a selection of my Jupyter notebooks, showcasing data analysis, visualization, and machine learning techniques applied to real-world datasets.</h3>
         </div>
         
@@ -14,7 +14,7 @@
                                 <h3>Open Notebook</h3>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/analyses/bc-service/logo.png" alt="" />
+                        <img class="img-fluid" src="assets/img/coding/bc-service/logo.png" alt="" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">BC Service</div>
@@ -32,7 +32,7 @@
                                 <h3>Open Notebook</h3>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/analyses/customer-complaints/logo.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/analyses/customer-complaints/logo.png" alt="" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Customer Complaints</div>
@@ -68,7 +68,7 @@
                                 <h3>Open Notebook</h3>
                             </div>
                         </div>
-                        <img class="img-fluid" src="assets/img/analyses/titanic/logo.jpg" alt="" />
+                        <img class="img-fluid" src="assets/img/analyses/titanic/logo.png" alt="" />
                     </a>
                     <div class="portfolio-caption">
                         <div class="portfolio-caption-heading">Titanic</div>
