--- a/projects/navbar.html
+++ b/projects/navbar.html
@@ -5,7 +5,7 @@
             <ul class="navbar-nav text-uppercase ml-auto">
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#about">About me</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#analyses">Analyses</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#coding">Coding</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#publications">Publications</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="../index.html#contact">Contact</a></li>
