Add Scaling Log Processing project with logo and pipeline image, and update project page

--- a/projects/scaling-log-processing.html
+++ b/projects/scaling-log-processing.html
@@ -80,6 +80,10 @@
                         The processed results are stored back in the data lake (S3) in a standardized and optimized format.
                         These results are then ingested into Amazon Redshift to support downstream analytics, including real-time dashboards and reporting, ensuring faster insights and improved decision-making.
                     </p>
+                    <p class="text-muted-centered">
+                        <img class="img-fluid d-block mx-auto" src="../assets/img/projects/scaling-log-processing/pipeline.png" alt="" />
+                        <b>Figure 1:</b> Illustration of the data pipeline for processing logs from the loyalty program.
+                    </p>
                     <p class="text-muted-justified">
                         Benchmark tests revealed significant performance improvements with the redesigned pipeline.
                         Using a container with 4 GB RAM and 2 vCPUs, single-threaded processing of 10,000 logs took 67 minutes.
