--- a/body/sections/projects.html
+++ b/body/sections/projects.html
@@ -8,6 +8,25 @@
             <div class="col-lg-4 col-sm-6 mb-4">
                 <div class="portfolio-item">
                     <!-- <a class="portfolio-link" data-toggle="modal" href="#projectsModalUserInteractionAnalysis"> -->
+                    <a class="portfolio-link" href="projects/scaling-log-processing.html">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                                <h3>Read More</h3>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/projects/scaling-log-processing/logo.png" alt="" />
+                    </a>
+                    <div class="portfolio-caption">
+                        <div class="portfolio-caption-heading">Scaling Log Processing</div>
+                        <div class="portfolio-caption-subheading text-muted"><b>Data Engineering</b></div>
+                        <div class="portfolio-caption-subheading text-muted">airflow, python, docker, s3, sqs, ecs, rds, aws</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-sm-6 mb-4">
+                <div class="portfolio-item">
+                    <!-- <a class="portfolio-link" data-toggle="modal" href="#projectsModalUserInteractionAnalysis"> -->
                     <a class="portfolio-link" href="projects/data-quality-scale.html">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
