Refine text descriptions in project modals for clarity and conciseness

--- a/body/modals/digital-inspector.html
+++ b/body/modals/digital-inspector.html
@@ -30,7 +30,7 @@
                                 our proposal. 
                             </p>
                             <p class="text-muted-justified">
-                                After constructing our database, we performed meticulous text extraction, data structuring, cleaning, 
+                                After constructing our database, we performed text extraction, data structuring, cleaning, 
                                 and standardization. We made several discoveries after extensive data exploration and the application of 
                                 statistical methods. One of these discoveries was that the terms used in the reports were quite limited. 
                                 Due to this, we were able to classify all possible damages, causes, mechanisms, and actions present in the 
