--- a/body/modals/distribution.html
+++ b/body/modals/distribution.html
@@ -28,7 +28,7 @@
                                     This project began by acquiring extensive historical lawsuit data, with a diverse array of metadata such 
                                     as case type, cause, and origin. This dataset tracked the legal journey of lawsuits from the <a class="link"
                                     target="_blank" href='http://www.tjrj.jus.br'> Court of Law from Rio de Janeiro</a> to the Public Prosecution.
-                                    To prepare this data for analysis, we meticulously executed a data cleansing process, which proved to be a 
+                                    To prepare this data for analysis, we executed a data cleansing process, which proved to be a 
                                     labor-intensive yet indispensable phase of the project.
                                 </p>
                                 <p class="text-muted-justified">
