--- a/body/modals/rural-property-valuation.html
+++ b/body/modals/rural-property-valuation.html
@@ -33,7 +33,7 @@
                                 such as terrain and altitude. During the data distribution analysis, we identified a significant 
                                 data concentration in the Southeast region of Brazil. We implemented a rigorous feature selection 
                                 process, enabling us to retain only the most pertinent data while eliminating noise. Additionally, 
-                                we conducted meticulous data cleaning and outlier removal to ensure the quality of our dataset.
+                                we conducted data cleaning and outlier removal to ensure the quality of our dataset.
                             </p>
                             <p class="text-muted-justified">
                                 One key aspect of our analysis involved examining the correlation between the value of bare land 
