--- a/body/modals/soybean-yield-forecast.html
+++ b/body/modals/soybean-yield-forecast.html
@@ -41,7 +41,7 @@
                                 and rainfall data, soil attributes, and municipal-level soybean production data. Our main goal was to forecast
                                 soybean yields in kilograms per hectare for 89 cities in Mato Grosso, focusing exclusively on this specific
                                 geographical area. Based on the selected papers, we implemented an ensemble model utilizing Deep Learning
-                                techniques, including Convolutional Neural Networks (CNN) and Random Forests (RF). Through meticulous
+                                techniques, including Convolutional Neural Networks (CNN) and Random Forests (RF). Through
                                 experimentation with various data combinations and sliding window parameters, we achieved great results.
                                 To evaluate and quantify the model performance, we relied on established regression metrics such as Mean
                                 Absolute Percentage Error (MAPE) and Root Mean Square Error (RMSE).
