--- a/body/modals/user-interaction-analysis.html
+++ b/body/modals/user-interaction-analysis.html
@@ -22,7 +22,7 @@
                                 evolving user expectations and needs.
                             </p>
                             <p class="text-muted-justified">
-                                Our initial step in this project involved the integration of a third-party software solution to meticulously
+                                Our initial step in this project involved the integration of a third-party software solution to
                                 track each user's actions and manage logs. We established a comprehensive set of tags to map relevant events, 
                                 including pageviews, clicks on elements, and interactions with hover buttons. Subsequently, we constructed a 
                                 robust data pipeline utilizing AWS services to store raw data, perform preprocessing tasks such as data cleansing, 
@@ -47,7 +47,7 @@
                                 experience within Seedz Mercator.
                             </p>
                             <p class="text-muted-justified">
-                                Furthermore, the meticulous process we established for tracking and analyzing user interactions served as a 
+                                Furthermore, the process we established for tracking and analyzing user interactions served as a 
                                 valuable foundation for enabling our product managers and designers to conduct A/B tests effectively. A/B testing 
                                 played a pivotal role in refining our web systems, allowing us to assess the impact of design and content changes 
                                 on user engagement and satisfaction. I take immense pride in the outcomes we achieved through this project, as 
