--- a/projects/similarity.html
+++ b/projects/similarity.html
@@ -61,7 +61,7 @@
                     <a class="link" target="_blank" href='http://www.tjrj.jus.br'>Court of Law</a> of Rio de Janeiro.
                 </p>
                 <p class="text-muted-justified">
-                    The documents, mainly in PDF format, underwent a text extraction process, followed by a meticulous 
+                    The documents, mainly in PDF format, underwent a text extraction process, followed by a 
                     pattern identification and analysis. To construct a vector representation of these documents, 
                     we explored various methodologies and ultimately opted for a <a class="link" target="_blank" 
                     href='http://nilc.icmc.usp.br/embeddings'>pre-trained model using word embeddings</a> specifically 
