--- a/projects/scaling-log-processing.html
+++ b/projects/scaling-log-processing.html
@@ -88,7 +88,7 @@
                         Benchmark tests revealed significant performance improvements with the redesigned pipeline.
                         Using a container with 4 GB RAM and 2 vCPUs, single-threaded processing of 10,000 logs took 67 minutes.
                         By leveraging multiprocessing to split the workload into 10 parallel processes, the processing time was reduced to just 5 minutes, with each process consuming approximately 40 MB of memory.
-                        Therefore, the entire pipeline could process 110,000 logs in 55 minutes, achieving a remarkable 90% reduction in processing time.
+                        Therefore, the new solution reduced the processing time for 110,000 logs from 55 minutes to just 5 minutes, achieving a remarkable 90% reduction in processing time.
                         This optimization significantly improved the pipeline’s performance, enabling faster processing, greater scalability, reduced costs, and enhanced data availability for downstream analytics.
                     </p>
                 </div>
